Fixed misalignment (#43)
* Fixed misalignment

* Added back top padding in mobile version for header text

--- a/styles/landingPage/bottomTab.module.css
+++ b/styles/landingPage/bottomTab.module.css
@@ -27,4 +27,9 @@
     width: 7px;
     height: 7px;
   }
+
+  .tabBarContainer {
+      margin-right: 5%;
+
+  }
 }
